--- a/build.gradle
+++ b/build.gradle
@@ -15,16 +15,16 @@ application {
 repositories {
     mavenCentral()
     maven {
-        name 'reposilite-repo'
-        url 'https://maven.reposilite.com/releases/'
+        name('reposilite-repo')
+        url('https://maven.reposilite.com/releases/')
     }
     maven {
-        name 'reposilite-snapshots'
-        url 'https://maven.reposilite.com/snapshots/'
+        name('reposilite-snapshots')
+        url('https://maven.reposilite.com/snapshots/')
     }
     maven {
-        name 'koboo-repo'
-        url 'https://reposilite.koboo.eu/releases'
+        name('koboo-repo')
+        url('https://reposilite.koboo.eu/releases')
     }
 }
 
@@ -37,19 +37,47 @@ shadowJar {
     archiveBaseName.set("discord-webhook-plugin")
 }
 
+task sourcesJar(type: Jar) {
+    from sourceSets.main.allJava
+    archiveClassifier.set('sources')
+}
+task javadocJar(type: Jar) {
+    from javadoc
+    archiveClassifier.set('javadoc')
+}
+
 publishing {
     repositories {
         maven {
-            url('https://reposilite.koboo.eu/binflux')
+            name('koboo-releases')
+            url('https://reposilite.koboo.eu/releases')
             credentials {
                 username(System.getenv('REPO_USER'))
                 password(System.getenv('REPO_TOKEN'))
+            }
+        }
+        maven {
+            name('reposilite-release')
+            url('https://maven.reposilite.com/releases')
+            credentials {
+                username(System.getenv('REPOSILITE_USER'))
+                password(System.getenv('REPOSILITE_TOKEN'))
+            }
+        }
+        maven {
+            name('reposilite-snapshots')
+            url('https://maven.reposilite.com/snapshots')
+            credentials {
+                username(System.getenv('REPOSILITE_USER'))
+                password(System.getenv('REPOSILITE_TOKEN'))
             }
         }
     }
     publications {
         maven(MavenPublication) {
             from components.java
+            artifact sourcesJar
+            artifact javadocJar
         }
     }
 }
