--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,12 @@ dependencies {
     compileOnly("com.reposilite:reposilite:$reposiliteVersion")
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+    toolchain.languageVersion.set(JavaLanguageVersion.of(11))
+}
+
 tasks.register('sourcesJar', Jar) {
     from sourceSets.main.allJava
     archiveClassifier.set('sources')
